--- a/index.html
+++ b/index.html
@@ -2,11 +2,22 @@
 <html>
 <head>
 	<title>Uzdevumi!</title>
-
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<nav class="navigation">
+		aaa <br>
+		bbb <br>
+	  </nav>
+		<aside>
+			aaa <br>
+			bbb <br>
+		</aside>
+		<div class="top">
 	<input type="number" id="rowCount" name="Uzdevumu skaits"></input>
 	<button onclick="createTable()">Veidot</button>
+</div><p>
+	<div class="center">
 	<table border="1" id="table">
 		<tr>
 			<th>Pirmais cipars</th>
@@ -16,6 +27,7 @@
 			<th>Ievade</th>
 		</tr>
 	</table>
+</div>
 <script type="text/javascript" src="exercises.js"></script>
 </body>
 </html>
