--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		</div>
 </div>
 </div>
-<script type="text/javascript" src="exercises.js"></script>
+<script type="text/javascript" src="lib/numbersLib.js"></script>
+<script type="text/javascript" src="numbersExercises.js"></script>
 </body>
 </html>
