--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 	<h1>Uzdevumi bērniem</h1>
 	<div class="container">
 		<div class="sideBar">
+			<input type="button" id="sideNumberExercises" onclick="showHideMain('sideNumberExercises')" value="Uzdevumi ar numuriem"> <br>
+			<input type="button" id="sideLetterExercises" onclick="showHideMain('sideLetterExercises')" value="Uzdevumi ar burtiem"> <br>
 		</div>
-		<div class="main">
+		<div class="numberExercises" id="numberExercises">
 			<div class="top">
 				<div class="exercise-options">
 					Uzdevumu skaits: <input class="input-text" type="number" min="0" max="40" value="4" id="rowCount" name="Uzdevumu skaits" required> <br>
@@ -24,6 +26,7 @@
 		</div>
 </div>
 </div>
+<script type="text/javascript" src="sideBar.js"></script>
 <script type="text/javascript" src="lib/numbersLib.js"></script>
 <script type="text/javascript" src="numbersExercises.js"></script>
 </body>
