--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			<input type="button" id="sideNumberExercises" onclick="showHideMain('sideNumberExercises')" value="Uzdevumi ar numuriem"> <br>
 			<input type="button" id="sideLetterExercises" onclick="showHideMain('sideLetterExercises')" value="Uzdevumi ar burtiem"> <br>
 		</div>
+		<div id="main" class="main" style="visibility:hidden">
 		<div class="numberExercises" id="numberExercises">
 			<div class="top">
 				<div class="exercise-options">
@@ -21,13 +22,20 @@
 				</div>
 		</div>
 		<div class="center">
-			<table id="table">
+			<table id="numberTable">
 			</table>
 		</div>
 </div>
+<div class="letterExercises" id="letterExercises" style="visibility:visible">
+	<table id="letterTable" border="1">
+	</table>
 </div>
+</div>
+</div>
+<script type="text/javascript" src="letters.json"></script>
 <script type="text/javascript" src="sideBar.js"></script>
 <script type="text/javascript" src="lib/numbersLib.js"></script>
 <script type="text/javascript" src="numbersExercises.js"></script>
+<script type="text/javascript" src="letterExercises.js"></script>
 </body>
 </html>
