letter exercises otrais piegājiens

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 <div class="letterExercises" id="letterExercises" style="visibility:visible">
 	<table id="letterTable" border="1">
 	</table>
+	<div id="test"></div>
+	<div id="test1"></div>
 </div>
 </div>
 </div>
