Strādājošs webapp <- DB, jārefaktorē

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			</table>
 		</div>
 </div>
-<p id="fromDB"></p>
+<p id="fromDB" style="visibility:visible"></p>
 </div>
 </div>
 <script type="text/javascript" src="letters.json"></script>
