Get random exercise from DB

--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
 <script type="text/javascript" src="lib/numbersLib.js"></script>
 <script type="text/javascript" src="numbersExercises.js"></script>
 <script type="text/javascript" src="letterExercises.js"></script>
+<script type="text/javascript" src="getFromDB.js"></script>
 </body>
 </html>
