--- a/index.html
+++ b/index.html
@@ -30,12 +30,10 @@
 <p id="fromDB" style="visibility:visible"></p>
 </div>
 </div>
-<script type="text/javascript" src="letters.json"></script>
-<script type="text/javascript" src="getFromDB.js"></script>
 <script type="text/javascript" src="sideBar.js"></script>
 <script type="text/javascript" src="lib/numbersLib.js"></script>
 <script type="text/javascript" src="numbersExercises.js"></script>
 <script type="text/javascript" src="letterExercises.js"></script>
-<script type="text/javascript" src="getFromDB.js"></script>
+<script type="text/javascript" src="lib/dbLib.js"></script>
 </body>
 </html>
