--- a/UFOp/index.html
+++ b/UFOp/index.html
@@ -3,6 +3,8 @@
         <meta charset="UTF-8"/>
         <title>Lidojošais šķīvītis
         </title>
+        <script type="text/javascript" src="js/grid.js"></script>
+        <script type="text/javascript" src="js/tankUtil.js"></script>
         <script type="text/javascript" src="phaser/phaser.js"></script>
         <script type="text/javascript" src="js/load.js"></script>
         <script type="text/javascript" src="js/menu.js"></script>
