--- a/UFOp/index.html
+++ b/UFOp/index.html
@@ -4,6 +4,7 @@
         <title>Lidojošais šķīvītis
         </title>
         <script type="text/javascript" src="js/grid.js"></script>
+        <script type="text/javascript" src="js/buttons.js"></script>
         <script type="text/javascript" src="js/tankUtil.js"></script>
         <script type="text/javascript" src="phaser/phaser.js"></script>
         <script type="text/javascript" src="js/load.js"></script>
