--- a/UFOp/index.html
+++ b/UFOp/index.html
@@ -7,7 +7,7 @@
     <body>        
         <div id="gameDiv">
         </div>
-        <script type="text/javascript" src="phaser/phaser.js"></script>                          
+        <script type="text/javascript" src="js/phaser/phaser.js"></script>                          
         <script type="text/javascript" src="js/load.js"></script>
         <script type="text/javascript" src="js/menu.js"></script>
         <script type="text/javascript" src="js/play.js"></script>
