--- a/UFOp/index.html
+++ b/UFOp/index.html
@@ -17,6 +17,7 @@
         <script type="text/javascript" src="js/configuration.js"></script>
         <script type="text/javascript" src="js/playGround.js"></script>        
         <script type="text/javascript" src="js/tankUtil.js"></script>
+        <script type="text/javascript" src="js/playUtil.js"></script>
         
     </body>
 </html>
