shootButton + shoot process

--- a/UFOp/index.html
+++ b/UFOp/index.html
@@ -18,6 +18,7 @@
         <script type="text/javascript" src="js/playGround.js"></script>        
         <script type="text/javascript" src="js/tankUtil.js"></script>
         <script type="text/javascript" src="js/playUtil.js"></script>
+        <script type="text/javascript" src="js/weapon.js"></script>
         
     </body>
 </html>
