--- a/UFOp/index.html
+++ b/UFOp/index.html
@@ -7,18 +7,18 @@
     <body>        
         <div id="gameDiv">
         </div>
+        <script type="text/javascript" src="js/configuration.js"></script>
         <script type="text/javascript" src="js/phaser/phaser.js"></script>                          
         <script type="text/javascript" src="js/load.js"></script>
         <script type="text/javascript" src="js/menu.js"></script>
         <script type="text/javascript" src="js/buttons.js"></script>
+        <script type="text/javascript" src="js/killUtil.js"></script>
         <script type="text/javascript" src="js/play.js"></script>
         <script type="text/javascript" src="js/win.js"></script>
-        <script type="text/javascript" src="js/game.js"></script>
-        <script type="text/javascript" src="js/configuration.js"></script>
+        <script type="text/javascript" src="js/game.js"></script>        
         <script type="text/javascript" src="js/playGround.js"></script>        
         <script type="text/javascript" src="js/tankUtil.js"></script>
         <script type="text/javascript" src="js/playUtil.js"></script>
         <script type="text/javascript" src="js/weapon.js"></script>
-        
     </body>
 </html>
